# ARM_RTC_AImode1

./: .gitignore  README.md  monitor-resources.sh  package-lock.json  start-arm-aigc.sh  start-quickstart.sh  start.sh  stop.sh
QuickStart_Demo_ARM/: .gitignore  AIGC_GUIDE.md  CMakeLists.txt  QuickStart.qrc  README.md  test_devices_gui.py
QuickStart_Demo_ARM/config/: config.json
QuickStart_Demo_ARM/docs/: CLIENT_ARCHITECTURE.md  DEVELOPMENT_GUIDE.md
QuickStart_Demo_ARM/resources/: app.qrc
QuickStart_Demo_ARM/scripts/: run.sh
QuickStart_Demo_ARM/sources/: AIGCApi.cpp  ExternalAudioRender.cpp  ExternalAudioRender.h  ExternalVideoSource.cpp  ExternalVideoSource.h  LoginWidget.h  OperateWidget.cpp  OperateWidget.h  RoomMainWidget.cpp  RoomMainWidget.h  VideoRenderWidget.cpp  VideoRenderWidgetGL.h  main.cpp
QuickStart_Demo_ARM/src/: main.cpp
QuickStart_Demo_ARM/src/app/: AIManager.cpp  AIManager.h  RoomMainWidget.cpp  RoomMainWidget.h
QuickStart_Demo_ARM/src/common/: AIMode.h  Constants.h  ErrorCode.h  Logger.cpp  Logger.h
QuickStart_Demo_ARM/src/core/api/: AIGCApi.cpp  AIGCApi.h
QuickStart_Demo_ARM/src/core/config/: ConfigManager.cpp  ConfigManager.h
QuickStart_Demo_ARM/src/core/media/: MediaManager.cpp  MediaManager.h
QuickStart_Demo_ARM/src/core/rtc/: CustomVideoSink.cpp  CustomVideoSink.h  RoomManager.cpp  RoomManager.h
QuickStart_Demo_ARM/src/drivers/impl/linux/: ExternalAudioRender.cpp  ExternalAudioRender.h  ExternalAudioSource.cpp  ExternalAudioSource.h  ExternalVideoSource.cpp  ExternalVideoSource.h
QuickStart_Demo_ARM/src/drivers/interfaces/: IAudioRender.h  IAudioSource.h  IVideoSource.h
QuickStart_Demo_ARM/src/ui/components/: VideoRenderWidget.cpp  VideoRenderWidget.h  VideoRenderWidgetGL.cpp  VideoRenderWidgetGL.h  VideoWidget.h
QuickStart_Demo_ARM/src/ui/styles/: StyleManager.cpp  StyleManager.h  dark.qss
QuickStart_Demo_ARM/src/ui/widgets/: ConversationWidget.cpp  ConversationWidget.h  LoginWidget.cpp  ModeWidget.cpp  ModeWidget.h  OperateWidget.cpp  OperateWidget.ui  RoomMainWidget.ui
QuickStart_Demo_ARM/ui/: ModeWidget.ui  OperateWidget.ui  VideoWidget.ui
Server/: app.js  credentials.json.template
Server/scenes/: Custom.json.template  chat.json  teach.json
src/: index.less  smallscreen.less
